--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,34 @@
 @tailwind utilities;
 
 @layer components {
-
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+  /* line-clamp */
+  .line-clamp {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    word-break: break-word;
+  }
+  .line-clamp-1 {
+    -webkit-line-clamp: 1;
+  }
+  .line-clamp-2 {
+    -webkit-line-clamp: 2;
+  }
+  .line-clamp-3 {
+    -webkit-line-clamp: 3;
+  }
+  .line-clamp-4 {
+    -webkit-line-clamp: 4;
+  }
+  .line-clamp-5 {
+    -webkit-line-clamp: 5;
+  }
+  .line-clamp-6 {
+    -webkit-line-clamp: 6;
+  }
 }
 
 html,
